@@ -9,19 +9,20 @@ import group.aist.cinema.repository.MovieRepository;
 import group.aist.cinema.service.MovieService;
 import group.aist.cinema.util.ImageUploadUtil;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.io.IOException;
 import java.util.Base64;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static group.aist.cinema.util.ExceptionMessages.MOVIE_NOT_FOUND;
+import static org.springframework.http.HttpStatus.*;
 
 @Service
 @RequiredArgsConstructor
-@Slf4j
 public class MovieServiceImpl implements MovieService {
 
     private final MovieRepository movieRepository;
@@ -36,21 +37,22 @@ public class MovieServiceImpl implements MovieService {
     @Override
     public MovieResponseDTO getMovieById(Long id) {
         Movie movie = movieRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Movie not found with id: " + id));
+                .orElseThrow(() -> new ResponseStatusException(BAD_REQUEST, MOVIE_NOT_FOUND + id));
         return movieMapper.mapToDto(movie);
     }
 
     @Override
     public List<MovieResponseDTO> getMovieByName(String name) {
         List<Movie> movies = movieRepository.findByName(name);
-        return movies.stream().map(movieMapper::mapToDto).collect(Collectors.toList());
+        return movies.stream().map(movieMapper::mapToDto).toList();
     }
 
     @Override
     public MovieResponseDTO createMovie(MovieRequestDTO movieRequestDTO) throws IOException {
         Movie movie = movieMapper.mapToEntity(movieRequestDTO);
 
-        ImageUploadUtil.saveFile(movieRequestDTO.getName(), movieRequestDTO.getImage());
+        ImageUploadUtil.saveFile(movieRequestDTO.getName(), movieRequestDTO.getBackgroundImage());
+        ImageUploadUtil.saveFile(movieRequestDTO.getName(), movieRequestDTO.getPosterImage());
         MovieResponseDTO movieResponseDTO = movieMapper.mapToDto(movieRepository.save(movie));
 
         returnBase64Image(movieRequestDTO, movieResponseDTO);
@@ -60,7 +62,7 @@ public class MovieServiceImpl implements MovieService {
     @Override
     public MovieResponseDTO updateMovie(Long id, MovieUpdateRequest movieDto) {
         Movie existingMovie = movieRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Movie not found with id: " + id));
+                .orElseThrow(() -> new ResponseStatusException(BAD_REQUEST, MOVIE_NOT_FOUND + id));
         movieMapper.updateMovieFromDTO(movieDto, existingMovie);
         return movieMapper.mapToDto(movieRepository.save(existingMovie));
     }
@@ -68,15 +70,18 @@ public class MovieServiceImpl implements MovieService {
     @Override
     public void deleteMovie(Long id) {
         if (!movieRepository.existsById(id)) {
-            throw new RuntimeException("Movie not found with id: " + id);
+            throw new ResponseStatusException(BAD_REQUEST, MOVIE_NOT_FOUND + id);
         }
         movieRepository.deleteById(id);
     }
 
 
     private static void returnBase64Image(MovieRequestDTO movieRequestDTO, MovieResponseDTO movieResponseDTO) throws IOException {
-        byte[] imageBytes = movieRequestDTO.getImage().getBytes();
-        String imageBase64 = Base64.getEncoder().encodeToString(imageBytes);
-        movieResponseDTO.setImage(imageBase64);
+        byte[] backgroundImage = movieRequestDTO.getBackgroundImage().getBytes();
+        byte[] posterImage = movieRequestDTO.getBackgroundImage().getBytes();
+        String backgroundImageBase64 = Base64.getEncoder().encodeToString(backgroundImage);
+        String posterImageBase64 = Base64.getEncoder().encodeToString(posterImage);
+        movieResponseDTO.setBackgroundImage(backgroundImageBase64);
+        movieResponseDTO.setPosterImage(posterImageBase64);
     }
 }
